// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get html font size 1`] = `16`;

exports[`typographyStyle 1`] = `
Object {
  "color": "#424242",
  "fontFamily": "'Raleway', sans-serif;",
  "fontSize": "1rem",
  "fontWeight": 300,
  "lineHeight": "2rem",
  "marginBottom": "1.375rem",
  "marginTop": 0,
  "paddingTop": "0.625rem",
}
`;

exports[`typographyStyle 2`] = `
Object {
  "color": "#9e9e9e",
  "fontFamily": "'Montserrat', sans-serif;",
  "fontSize": "1rem",
  "fontWeight": 300,
  "lineHeight": "2rem",
  "marginBottom": "1.375rem",
  "marginTop": 0,
  "paddingTop": "0.625rem",
}
`;
